More visibility for loading message. Fixed path to bundle file

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -41,4 +41,5 @@ h1 {
   background-color: rgba(0, 0, 0, 0.7);
   text-align: center;
   color: #ffffff;
+  font-size: 2em;
 }
